Prevent code blocks from overlapping (#20)

--- a/src/styles/partials/_general.scss
+++ b/src/styles/partials/_general.scss
@@ -68,6 +68,7 @@ pre {
   color: var(--text-color);
   line-height: initial;
   padding: 0.5rem;
+  overflow-wrap: anywhere;
 }
 
 code,
